--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
 	"main": "dist/index.cjs",
 	"module": "dist/index.js",
 	"types": "dist/index.d.ts",
+	"files": [
+		"./dist/*.d.ts",
+		"./dist/*.js",
+		"./dist/*.mjs",
+		"./dist/*.map"
+	],
 	"scripts": {
 		"build": "tsup",
 		"dev": "tsup --watch",
