--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
 	"module": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"files": [
-		"./dist/*.d.ts",
-		"./dist/*.js",
-		"./dist/*.mjs",
-		"./dist/*.map"
+		"./dist/*"
 	],
 	"scripts": {
+		"prebuild": "yarn clean",
 		"build": "tsup",
 		"dev": "tsup --watch",
 		"bundle": "tsc",
 		"types": "tsc --noEmit --pretty",
-		"test": "jest --runInBand"
+		"test": "jest --runInBand",
+		"clean": "node scripts/clean.mjs",
+		"prepublish": "yarn build"
 	},
 	"dependencies": {
 		"@charliewilco/toolkit": "^0.5.0",
@@ -26,9 +26,11 @@
 		"htmlparser2": "^9.0.0"
 	},
 	"devDependencies": {
+		"arg": "^5.0.2",
 		"@types/he": "^1.1.2",
 		"@types/jest": "^29.4.0",
 		"@types/node": "^18.14.6",
+		"del": "^7.0.0",
 		"he": "^1.2.0",
 		"jest": "^29.5.0",
 		"prettier": "^2.8.8",
